--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@ body{
   color: #A8763E;  */
 }
 
+/* *{
+  margin: 0;
+  padding: 0;
+} */
+
 .section-1-header{
   font-weight: 700;
   font-size: 50px;
@@ -305,6 +310,146 @@ ul {
   list-style-type: square;
   list-style-image: linear-gradient(salmon,tomato);
 }
+
+
+
+/* footers */
+
+
+.form-sections{
+  display: flex;
+  background-color: #152238;
+  /* border: 5px solid black; */
+  margin-top: 100px;
+  margin-bottom: 100px;
+  /* padding: 20px 20px; */
+  box-shadow: 5px 5px 20px grey;
+  border-radius: 30px;
+  color: white;
+}
+
+.form-sections section{
+  width: 40%;
+}
+
+.form-sections-part-2{
+  display: flex;
+}
+
+.form-sections-part-2 div{
+  width: 33.33%;
+  margin-top: 30px;
+  padding: 20px;
+}
+
+.form-sections-part-1{
+  padding: 80px 80px 80px 80px;
+  margin-right: -150px;
+}
+
+
+.contact-info-part-1{
+  padding: 40px 40px;
+  margin-right: 60px;
+}
+
+.contact-info-part-2{
+  padding: 40px 40px;
+  margin-right: 60px;
+  
+}
+
+.contact-info-part-3{
+  padding: 40px 0px 40px 10px;
+  display: inline-block;
+}
+
+.link-class img{
+  width: 30px;
+  height: 30px;
+}
+
+.link-class{
+  display: flex;
+  padding-top: 5px;
+}
+
+.fa {
+  padding: 20px;
+  font-size: 10px;
+  width: 10px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-youtube {
+  background: #bb0000;
+  color: white;
+}
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+
+#mail-add{
+  border-radius: 10px;
+  padding: 10px 10px;
+  background-color: rgba(87, 26, 4, 0.116);
+}
+
+#button{
+  border-radius: 5px;
+  padding: 0 15px 0 15px;
+  background-image: linear-gradient(black, grey);
+  color: white;
+  font-size: 15px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 500;
+}
+
+.form-head {
+  color: rgb(238, 105, 91);
+  font-weight: 700;
+  text-shadow: 2px 2px 5px black;
+}
+
+#letter{
+  color: white;
+  font-weight: 600;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
